--- a/main.html
+++ b/main.html
@@ -6,11 +6,13 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body  onload="getSize()" onresize="getSize()">
 	<!-- the entire body must be written by student -->
-	
+<div id="sizeInfo">
 		
 	</div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
